crates/openehr-serde/tests/snapshots/full_rm_canonical_json__SECTION.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "SECTION",
  "name": {
    "_type": "DV_TEXT",
    "value": "Vital signs"
  },
  "archetype_node_id": "openEHR-EHR-SECTION.vital_signs.v1"
}
