crates/openehr-serde/tests/snapshots/full_rm_canonical_json__SET.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "SET"
}
