crates/openehr-serde/tests/snapshots/full_rm_canonical_json__SYNC_EXTRACT.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "SYNC_EXTRACT",
  "name": {
    "_type": "DV_TEXT",
    "value": "sync extract"
  },
  "archetype_node_id": "openEHR-EHR-SYNC_EXTRACT.sample.v1",
  "specification": {
    "_type": "SYNC_EXTRACT_SPEC",
    "includes_versions": true
  }
}
