crates/openehr-serde/tests/snapshots/full_rm_canonical_json__SYNC_EXTRACT_REQUEST.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "SYNC_EXTRACT_REQUEST",
  "name": {
    "_type": "DV_TEXT",
    "value": "sync extract request"
  },
  "archetype_node_id": "openEHR-EHR-SYNC_EXTRACT_REQUEST.sample.v1",
  "specification": {
    "_type": "SYNC_EXTRACT_SPEC",
    "includes_versions": true
  }
}
