crates/openehr-serde/tests/snapshots/full_rm_canonical_json__SYNC_EXTRACT_SPEC.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "SYNC_EXTRACT_SPEC",
  "includes_versions": true
}
