crates/openehr-serde/tests/snapshots/full_rm_canonical_json__TERMINOLOGY_CODE.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "terminology_id": "openehr",
  "code_string": "433",
  "uri": {
    "_type": "URI",
    "value": "http://example.org/terminology/433"
  }
}
