crates/openehr-serde/tests/snapshots/full_rm_canonical_json__TERMINOLOGY_TERM.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "concept": {
    "terminology_id": "openehr",
    "code_string": "433",
    "uri": "http://example.org/terminology/433"
  },
  "text": "event"
}
