crates/openehr-serde/tests/snapshots/full_rm_canonical_json__TERM_MAPPING.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "TERM_MAPPING",
  "match": "=",
  "target": {
    "_type": "CODE_PHRASE",
    "terminology_id": {
      "_type": "TERMINOLOGY_ID",
      "value": "SNOMED-CT"
    },
    "code_string": "50043002"
  }
}
