crates/openehr-serde/tests/snapshots/full_rm_canonical_json__TIME.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "value": "10:00:00"
}
