crates/openehr-serde/tests/snapshots/full_rm_canonical_json__TRANSLATION_DETAILS.snap
---
source: crates/openehr-serde/tests/full_rm_canonical_json.rs
expression: v.value
---
{
  "_type": "TRANSLATION_DETAILS",
  "language": {
    "terminology_id": "ISO_639-1",
    "code_string": "nl",
    "uri": "http://example.org/terminology/nl"
  },
  "author": {
    "name": "T. Author"
  }
}
